# bcr_bot

./: CMakeLists.txt  package.xml
config/: nav2_params.yaml
launch/: bcr_bot_gazebo_spawn.launch.py  multiple_empty_gazebo.launch.py  multirobot_gazebo.launch.py  multirobot_spawn.launch.py  start_empty_world.launch.py
scripts/: multi_point_follow.py  point_follow.py
